<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Profiler</string>
    <string name="action_settings">Settings</string>
    <string name="start_profiler_service">Start Collecting Data</string>
    <string name="stop_services">Stop Services</string>
    <string name="experimental">Experimental</string>
    <string name="start_classifier_service">Start Classifier</string>
    <string name="start_feature_computation_service">Compute Features</string>
    <string name="save_data">Store Web Browser Data</string>
    <string name="fb_app_id">546381482096079</string>
    <string name="title_activity_sample_test_acitivity">SampleTestAcitivity</string>
    <string name="welcome">welcome</string>
    <string name="question">Enter your Question</string>
    <string name="questionDB">Ask Question</string>
    <string name="ask_Question">Ask Questions</string>
    <string name="get_Question">Get Feedback</string>
    <string name="title_activity_databasequestion">Databasequestion</string>
    <string name="give_answer">Give Feedback</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="answer">Send Feedback</string>
    <string name="next">Next Feedback</string>
    <string name="enter_launch_codes">Enter the rating(1-10)</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="title_activity_qn_adisplay">QnADisplayActivity</string>
    <string name="getQuestions">Stored Responses</string>
    <string name="syncWithRepo">Sync Repo Data</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_responses">Responses</string>
    <string name="hello_world">Hello world!</string>

</resources>