<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iitg.mobileprofiler.Feedback"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       
	    <Button android:text="@string/answer" 
            android:id="@+id/Button" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="sendFeedback">
        </Button>
        <Button android:text="@string/next" 
            android:id="@+id/ButtonNext" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="nextQuestion">
        </Button>
         <EditText android:id="@+id/EditText" 
            android:hint="@string/enter_launch_codes" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_above="@+id/Button">
        </EditText>
	 </RelativeLayout>

</FrameLayout>

